# UltrafastSecp256k1

./: .clang-tidy  .gitignore  .zenodo.json  AUDIT_COVERAGE.md  AUDIT_GUIDE.md  AUDIT_REPORT.md  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CMakePresets.json  CODEOWNERS  Dockerfile.auditor  Doxyfile  GPU_TESTING_GUIDE.md  PORTING.md  Package.swift  README.md  RISCV_OPTIMIZATIONS.md  ROADMAP.md  SECURITY.md  THREAT_MODEL.md  WHY_ULTRAFASTSECP256K1.md  codecov.yml  conanfile.py  docker-compose.ci.yml  sonar-project.properties  vcpkg.json
.ci-baseline/: baseline_arm64_pre_techdebt_20260321.txt  baseline_pre_techdebt_20260321.txt
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  performance_regression.md
.github/codeql/: codeql-config.yml
.github/requirements/: audit-deps.txt  auditor-docker.txt  cbom.txt  ct-prover.txt  release-build.txt
.github/workflows/: audit-report.yml  bench-regression.yml  benchmark.yml  bindings.yml  caas-evidence-refresh.yml  caas-freshness-check.yml  caas.yml  cbom.yml  ci-advisory.yml  ci.yml  clang-tidy.yml  codeql.yml  compute-sanitizer.yml  conformance-vectors.yml  cppcheck.yml  cryptofuzz.yml  ct-prover.yml  cycle-ct.yml  docs.yml  formal-verification.yml  gate.yml  gpu-selfhosted.yml  klee.yml  mutation.yml  nuget-native.yml  packaging.yml  preflight.yml  release.yml  research-monitor.yml  scorecard.yml  security-audit.yml  (+4 more)
android/: CMakeLists.txt  README.md  build_android.ps1  build_android.sh
audit/: AUDIT_TEST_PLAN.md  CMakeLists.txt  audit_ct_namespace.cpp  audit_field.cpp  audit_fuzz.cpp  audit_integration.cpp  audit_invariants.cpp  audit_perf.cpp  audit_secure_erase.cpp  audit_zk.cpp  feature_run_stubs_unified.cpp  fuzz_bip324_frame.cpp  fuzz_bip32_path.cpp  fuzz_der_parse.cpp  fuzz_ecdsa_verify.cpp  fuzz_pubkey_parse.cpp  fuzz_schnorr_verify.cpp  latest.txt  shim_run_stubs_unified.cpp  test_abi_gate.cpp  test_adversarial_protocol.cpp  test_bip352_kat.cpp  test_c_abi_negative.cpp  test_c_abi_thread_stress.cpp  test_cross_libsecp256k1.cpp  test_cryptol_specs.cpp  test_ct_sidechannel.cpp  test_ct_verif_formal.cpp  test_ecies_regression.cpp  test_exploit_adaptor_extraction_soundness.cpp  test_exploit_adaptor_parity.cpp  test_exploit_address_prefix_collision.cpp  test_exploit_batch_sign.cpp  test_exploit_batch_verify_correctness.cpp  test_exploit_biased_nonce_chain_scan.cpp  test_exploit_binding_adversarial_api.cpp  test_exploit_bip322_type_confusion.cpp  test_exploit_bip32_child_key_attack.cpp  test_exploit_bip352_parity_confusion.cpp  test_exploit_bip352_scan_dos.cpp  (+149 more)
audit-output-clang-17/: audit_report.json  audit_report.txt
audit-output-gcc-13/: audit_report.json  audit_report.txt
bench-v2/: data.js
benchmark_results/: benchmark.json  lagging_rows.txt
benchmarks/: README.md
bindings/java/: CMakeLists.txt  README.md
bindings/java/jni/: ufsecp_jni.c
bindings/java/src/com/ultrafast/ufsecp/: Ufsecp.java
bindings/java/tests/: SmokeTest.java
ci/: audit_gate.py  audit_sla_check.py  audit_test_quality_scanner.py  build_project_graph.py  check_abi_count.py  check_advisory_has_blocking_test.py  check_advisory_skip_ceiling.py  check_advisory_skip_codes.py  check_advisory_skip_returns.sh  check_backend_parity.py  check_bench_doc_consistency.py  check_ct_branches.py  check_doc_module_counts.py  check_libsecp_shim_parity.py  check_profile_smoke.sh  check_protocol_invariants.py  check_secret_erase_coverage.py  check_section_ids.py  check_security_fix_has_test.py  check_soundness_coverage.py  check_source_graph_quality.py  check_test_assertions.py  check_version_sync.py  check_werror_build.sh  check_workflow_trigger_claims.py  check_zk_tag_conformance.py  ci_local.sh  code_quality_baseline.json  dev_bug_scanner.py  gen_build_options.py  libsecp_bridge.py  render_audit_dashboard.py  research_monitor.py  run_fast_gates.sh  sync_audit_report_version.py  sync_canonical_numbers.py  sync_docs_from_canonical.py  sync_module_count.py  test_audit_scripts.py  test_check_advisory_skip_ceiling.py  (+6 more)
cpu/: CMakeLists.txt
cuda/: CMakeLists.txt
docs/: ABI_NEGATIVE_TEST_MANIFEST.json  ABI_NEGATIVE_TEST_MANIFEST.md  ABI_VERSIONING.md  ADOPTION.md  AI_TOOLING_GUIDE.md  API_REFERENCE.md  API_SECURITY_CONTRACTS.json  ARCHITECTURE.md  ARM64_AUDIT_BENCHMARK.md  ARM64_GAPS_ANALYSIS.md  ASSURANCE_LEDGER.md  ATTACK_GUIDE.md  AUDITOR_QUICKSTART.md  AUDIT_CHANGELOG.md  AUDIT_COVERAGE.md  AUDIT_DASHBOARD.md  AUDIT_GUIDE.md  AUDIT_INFRA_TODO.md  AUDIT_MANIFEST.md  AUDIT_PHILOSOPHY.md  AUDIT_READINESS_REPORT_v1.md  AUDIT_REPORT.md  AUDIT_SCOPE.md  AUDIT_SLA.json  AUDIT_STANDARD.md  AUDIT_TRACEABILITY.md  BACKEND_ASSURANCE_MATRIX.md  BACKEND_PARITY.md  BENCHMARKING.md  BENCHMARKS.md  BENCHMARK_BIP324_GPU.md  BENCHMARK_CROSS_LIBRARY.md  BENCHMARK_METHODOLOGY.md  BENCH_REGENERATION_PLAN.md  BINDINGS.md  BINDINGS_ABI_COMPAT.md  BINDINGS_EXAMPLES.md  BINDINGS_MEMORY_MODEL.md  BINDINGS_PACKAGING.md  BINDINGS_USAGE_STANDARD.md  (+501 more)
metal/: README.md
nuget/: UltrafastSecp256k1.Native.nuspec
opencl/: BENCHMARK_RESULTS.md
scripts/: _ufsecp.py  audit_gate.py  audit_sla_check.py  audit_test_quality_scanner.py  auditor_mode.py  bip32_cka_demo.py  build_owner_audit_bundle.py  build_project_graph.py  build_wasm.sh  dev_bug_scanner.py  differential_cross_impl.py  generate_abi_negative_tests.py  generate_traceability.sh  glv_exhaustive_check.py  hot_path_alloc_scanner.py  invalid_input_grammar.py  local-ci.sh  mutation_kill_rate.py  nonce_bias_detector.py  preflight.py  rfc6979_spec_verifier.py  run-qemu-smoke.sh  semantic_props.py  stateful_sequences.py  sync_audit_report_version.py  sync_version_refs.py  test_audit_scripts.py  validate_assurance.py  verify_slsa_provenance.py
src/bch/: CMakeLists.txt
src/bch/cuda/: bch_scan.cu
src/bch/examples/: rpa_wallet.cpp
src/bch/opencl/: bch_grinding_ocl.cpp  secp256k1_bch_grinding.cl
src/bch/src/: bch_scan.cpp  cashaddr.cpp  rpa.cpp
tests/: differential_test.cpp  test_ct_sidechannel.cpp
wasm/: CMakeLists.txt  README.md  bench_wasm.mjs  package.json  secp256k1.d.ts  secp256k1_wasm.cpp  secp256k1_wasm.h
(+413 files in other folders)
